// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select.Tags OptGroup renders correctly 1`] = `
<div>
  <div
    class="rc-select rc-select-multiple rc-select-open rc-select-show-search"
  >
    <div
      class="rc-select-selector"
    >
      <div
        class="rc-select-selection-overflow"
      >
        <div
          class="rc-select-selection-overflow-item"
          style="opacity: 1;"
        >
          <span
            class="rc-select-selection-item"
          >
            <span
              class="rc-select-selection-item-content"
            >
              Jack
            </span>
            <span
              aria-hidden="true"
              class="rc-select-selection-item-remove"
              style="user-select: none;"
              unselectable="on"
            >
              <span
                class="rc-select-selection-item-remove-icon"
              >
                ×
              </span>
            </span>
          </span>
        </div>
        <div
          class="rc-select-selection-overflow-item"
          style="opacity: 1;"
        >
          <span
            class="rc-select-selection-item"
          >
            <span
              class="rc-select-selection-item-content"
            >
              foo
            </span>
            <span
              aria-hidden="true"
              class="rc-select-selection-item-remove"
              style="user-select: none;"
              unselectable="on"
            >
              <span
                class="rc-select-selection-item-remove-icon"
              >
                ×
              </span>
            </span>
          </span>
        </div>
        <div
          class="rc-select-selection-overflow-item rc-select-selection-overflow-item-suffix"
          style="opacity: 1;"
        >
          <div
            class="rc-select-selection-search"
            style="width: 0px;"
          >
            <input
              aria-activedescendant="rc_select_TEST_OR_SSR_list_1"
              aria-autocomplete="list"
              aria-controls="rc_select_TEST_OR_SSR_list"
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-owns="rc_select_TEST_OR_SSR_list"
              autocomplete="off"
              class="rc-select-selection-search-input"
              id="rc_select_TEST_OR_SSR"
              role="combobox"
              type="search"
              value=""
            />
            <span
              aria-hidden="true"
              class="rc-select-selection-search-mirror"
            >
               
            </span>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="rc-select-dropdown"
        style="opacity: 0; pointer-events: none; min-width: 0; width: 0px;"
      >
        <div>
          <div
            id="rc_select_TEST_OR_SSR_list"
            role="listbox"
            style="height: 0px; width: 0px; overflow: hidden;"
          >
            <div
              aria-selected="false"
              id="rc_select_TEST_OR_SSR_list_0"
              role="option"
            />
            <div
              aria-label="Jack"
              aria-selected="true"
              id="rc_select_TEST_OR_SSR_list_1"
              role="option"
            >
              jack
            </div>
            <div
              aria-selected="false"
              id="rc_select_TEST_OR_SSR_list_2"
              role="option"
            />
          </div>
          <div
            class="rc-virtual-list"
            style="position: relative;"
          >
            <div
              class="rc-virtual-list-holder"
              style="max-height: 200px; overflow-y: auto;"
            >
              <div>
                <div
                  class="rc-virtual-list-holder-inner"
                  style="display: flex; flex-direction: column;"
                >
                  <div
                    class="rc-select-item rc-select-item-group"
                  >
                    Manager
                  </div>
                  <div
                    aria-selected="true"
                    class="rc-select-item rc-select-item-option rc-select-item-option-grouped rc-select-item-option-active rc-select-item-option-selected"
                    title="Jack"
                  >
                    <div
                      class="rc-select-item-option-content"
                    >
                      Jack
                    </div>
                    <span
                      aria-hidden="true"
                      class="rc-select-item-option-state"
                      style="user-select: none;"
                      unselectable="on"
                    >
                      <span
                        class="rc-select-item-option-state-icon"
                      >
                        ✓
                      </span>
                    </span>
                  </div>
                  <div
                    class="rc-select-item rc-select-item-group"
                  >
                    Engineer
                  </div>
                  <div
                    aria-selected="false"
                    class="rc-select-item rc-select-item-option rc-select-item-option-grouped"
                    title="yiminghe"
                  >
                    <div
                      class="rc-select-item-option-content"
                    >
                      yiminghe
                    </div>
                    <span
                      aria-hidden="true"
                      class="rc-select-item-option-state"
                      style="user-select: none;"
                      unselectable="on"
                    >
                      <span
                        class="rc-select-item-option-state-icon"
                      />
                    </span>
                  </div>
                  <div
                    aria-selected="true"
                    class="rc-select-item rc-select-item-option rc-select-item-option-selected"
                    title="foo"
                  >
                    <div
                      class="rc-select-item-option-content"
                    >
                      foo
                    </div>
                    <span
                      aria-hidden="true"
                      class="rc-select-item-option-state"
                      style="user-select: none;"
                      unselectable="on"
                    >
                      <span
                        class="rc-select-item-option-state-icon"
                      >
                        ✓
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select.Tags render not display maxTagPlaceholder if maxTagCount not reach 1`] = `
<div
  class="rc-select rc-select-multiple rc-select-show-search"
>
  <div
    class="rc-select-selector"
  >
    <div
      class="rc-select-selection-overflow"
    >
      <div
        class="rc-select-selection-overflow-item rc-select-selection-overflow-item-suffix"
        style="opacity: 1;"
      >
        <div
          class="rc-select-selection-search"
          style="width: 0px;"
        >
          <input
            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="rc-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            role="combobox"
            type="search"
            value=""
          />
          <span
            aria-hidden="true"
            class="rc-select-selection-search-mirror"
          >
             
          </span>
        </div>
      </div>
    </div>
    <span
      class="rc-select-selection-placeholder"
    />
  </div>
</div>
`;

exports[`Select.Tags render truncates tags by maxTagCount and show maxTagPlaceholder 1`] = `
<div
  class="rc-select rc-select-multiple rc-select-show-search"
>
  <div
    class="rc-select-selector"
  >
    <div
      class="rc-select-selection-overflow"
    >
      <div
        class="rc-select-selection-overflow-item"
        style="opacity: 1;"
      >
        <span
          class="rc-select-selection-item"
        >
          <span
            class="rc-select-selection-item-content"
          >
            One
          </span>
          <span
            aria-hidden="true"
            class="rc-select-selection-item-remove"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              class="rc-select-selection-item-remove-icon"
            >
              ×
            </span>
          </span>
        </span>
      </div>
      <div
        class="rc-select-selection-overflow-item"
        style="opacity: 1;"
      >
        <span
          class="rc-select-selection-item"
        >
          <span
            class="rc-select-selection-item-content"
          >
            Two
          </span>
          <span
            aria-hidden="true"
            class="rc-select-selection-item-remove"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              class="rc-select-selection-item-remove-icon"
            >
              ×
            </span>
          </span>
        </span>
      </div>
      <div
        class="rc-select-selection-overflow-item rc-select-selection-overflow-item-rest"
        style="opacity: 1;"
      >
        <span
          class="rc-select-selection-item"
        >
          <span
            class="rc-select-selection-item-content"
          >
            <span>
              Omitted
            </span>
          </span>
        </span>
      </div>
      <div
        class="rc-select-selection-overflow-item rc-select-selection-overflow-item-suffix"
        style="opacity: 1;"
      >
        <div
          class="rc-select-selection-search"
          style="width: 0px;"
        >
          <input
            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="rc-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            role="combobox"
            type="search"
            value=""
          />
          <span
            aria-hidden="true"
            class="rc-select-selection-search-mirror"
          >
             
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select.Tags render truncates tags by maxTagCount and show maxTagPlaceholder function 1`] = `
<div
  class="rc-select rc-select-multiple rc-select-show-search"
>
  <div
    class="rc-select-selector"
  >
    <div
      class="rc-select-selection-overflow"
    >
      <div
        class="rc-select-selection-overflow-item"
        style="opacity: 1;"
      >
        <span
          class="rc-select-selection-item"
        >
          <span
            class="rc-select-selection-item-content"
          >
            One
          </span>
          <span
            aria-hidden="true"
            class="rc-select-selection-item-remove"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              class="rc-select-selection-item-remove-icon"
            >
              ×
            </span>
          </span>
        </span>
      </div>
      <div
        class="rc-select-selection-overflow-item"
        style="opacity: 1;"
      >
        <span
          class="rc-select-selection-item"
        >
          <span
            class="rc-select-selection-item-content"
          >
            Two
          </span>
          <span
            aria-hidden="true"
            class="rc-select-selection-item-remove"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              class="rc-select-selection-item-remove-icon"
            >
              ×
            </span>
          </span>
        </span>
      </div>
      <div
        class="rc-select-selection-overflow-item rc-select-selection-overflow-item-rest"
        style="opacity: 1;"
      >
        <span
          class="rc-select-selection-item"
        >
          <span
            class="rc-select-selection-item-content"
          >
            <span>
              1 values omitted
            </span>
          </span>
        </span>
      </div>
      <div
        class="rc-select-selection-overflow-item rc-select-selection-overflow-item-suffix"
        style="opacity: 1;"
      >
        <div
          class="rc-select-selection-search"
          style="width: 0px;"
        >
          <input
            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="rc-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            role="combobox"
            type="search"
            value=""
          />
          <span
            aria-hidden="true"
            class="rc-select-selection-search-mirror"
          >
             
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select.Tags render truncates values by maxTagTextLength 1`] = `
<div
  class="rc-select rc-select-multiple rc-select-show-search"
>
  <div
    class="rc-select-selector"
  >
    <div
      class="rc-select-selection-overflow"
    >
      <div
        class="rc-select-selection-overflow-item"
        style="opacity: 1;"
      >
        <span
          class="rc-select-selection-item"
        >
          <span
            class="rc-select-selection-item-content"
          >
            On...
          </span>
          <span
            aria-hidden="true"
            class="rc-select-selection-item-remove"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              class="rc-select-selection-item-remove-icon"
            >
              ×
            </span>
          </span>
        </span>
      </div>
      <div
        class="rc-select-selection-overflow-item"
        style="opacity: 1;"
      >
        <span
          class="rc-select-selection-item"
        >
          <span
            class="rc-select-selection-item-content"
          >
            Tw...
          </span>
          <span
            aria-hidden="true"
            class="rc-select-selection-item-remove"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              class="rc-select-selection-item-remove-icon"
            >
              ×
            </span>
          </span>
        </span>
      </div>
      <div
        class="rc-select-selection-overflow-item rc-select-selection-overflow-item-suffix"
        style="opacity: 1;"
      >
        <div
          class="rc-select-selection-search"
          style="width: 0px;"
        >
          <input
            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="rc-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            role="combobox"
            type="search"
            value=""
          />
          <span
            aria-hidden="true"
            class="rc-select-selection-search-mirror"
          >
             
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
